# tictactoe

./: .coveragerc  .env.example  .gitignore  .pre-commit-config.yaml  COPILOT_INSTRUCTIONS.md  Dockerfile.backend  Dockerfile.frontend  README.md  alembic.ini  codecov.yml  docker-compose.dev.yml  docker-compose.yml  main.py  nginx.conf  pyproject.toml  setup.sh
.github/workflows/: ci-coverage.yml  coverage-badge.yml  tests.yml
app/database/: connection.py
app/models/: game.py  leaderboard.py  user.py
app/routers/: auth.py  games.py  leaderboard.py  websocket.py
app/services/: ai_service.py  game_service.py  leaderboard_service.py  redis_service.py  user_service.py  websocket_service.py
migrations/: env.py
migrations/versions/: a890291a707f_seed_test_user.py  d7ad0e2ba7e0_initial_schema.py
public/: .eslintrc.json  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  tsconfig.test.json  vite.config.ts  vitest.config.ts
public/src/: App.tsx  index.css  setupTests.ts
public/src/__tests__/: App.simple.test.tsx  App.test.tsx  GameBoard.simple.test.tsx  GameBoard.test.tsx  GameLobby.simple.test.tsx  Leaderboard.test.tsx  (+9 more)
tests/: test_ai_service.py  test_coverage_improvements.py  test_database.py  test_database_extended.py  test_game_logic.py  test_game_models.py  test_game_service.py  test_game_service_extended.py  test_game_service_helpers.py  test_leaderboard_service.py  test_redis_coverage.py  test_redis_extended.py  test_redis_integration.py  test_redis_service.py  test_routers.py  test_user_service.py  test_websocket_service.py
(+11 files in other folders)
